2006-07-19  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* Documentation/user/GNUmakefile ($(outdir)/%.pdf): foolproof
	recipe for eps -> pdf conversion.

2006-07-19  Erik Sandberg  <mandolaerik@gmail.com>

	* lily/parser.yy, lily/lexer.ll: added some simplifications by
	Angelo Contardi.

2006-07-19  Graham Percival  <gpermus@gmail.com>

	* input/manual/screech-boink.ly: moved to here.

	* input/screech-boink.ly: deleted.

	* scm/define-grob-properties.scm: clarify doc string.

2006-07-19  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* Documentation/topdocs/NEWS.tely (Top): doc new feature.

	* scm/output-ps.scm (path): define path.

	* scm/define-stencil-commands.scm
	(ly:register-stencil-expression): add path.

	* scm/define-music-properties.scm (all-music-properties): add delta-pitch.

	* ly/engraver-init.ly: add Fall_engraver

	* lily/parser.yy (music_function_event): allow musicfunction
	without music arg as music_function_event.

	* lily/grob-scheme.cc (LY_DEFINE):
	ly:grob-robust-relative-extent. New function.

	* scm/define-grobs.scm (all-grob-descriptions): add BendAfter

	* scm/define-music-types.scm (music-descriptions): add BendAfterEvent.

	* scm/output-lib.scm (fall::print): new function

	* lily/fall-engraver.cc (stop_fall): new file.

	* ly/music-functions-init.ly: alphabetise.

	* Documentation/user/GNUmakefile (OUT_PNG_IMAGES): pdf iso. eps as
	base.

2006-07-17  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION (PATCH_LEVEL): bump version. Release 2.9.12

	* Documentation/user/lilypond-book.itely (Invoking lilypond-book):
	doc pdftex usage.

	* lily/translator-group.cc (connect_to_context): non const error message.

	* Documentation/user/GNUmakefile ($(outdir)/%.pdf): update to use PDF

	* scm/paper.scm (internal-set-paper-size): define landscape to #f
	if unset.

	* scm/framework-ps.scm (convert-to-pdf): swap h and w in case of landscape. 

	* stepmake/stepmake/texinfo-rules.make: strip DVI support.
