@@ -21,6 +21,11 @@
  '(implicit))
 
 (ly:add-interface
+ 'bend-after-interface
+ "A doit or drop."
+ '(delta-position))
+
+(ly:add-interface
  'bass-figure-alignment-interface
  ""
  '())
